deploy: ef3e737ed68dddd3bf58e2deef94a45a7b2df94a

--- a/404.html
+++ b/404.html
@@ -120,9 +120,15 @@
 	<div class="widget__content">
 		<ul class="widget__list">
 			<li class="widget__item"><a class="widget__link" href="/posts/configure-hugo-asciidoc-blog/">Hugo&#43;Asciidoc配置记录</a></li>
-			<li class="widget__item"><a class="widget__link" href="/posts/apk-size-opt-summary/">Android安装包优化</a></li>
-			<li class="widget__item"><a class="widget__link" href="/posts/opt-apk-size-by-remove-debuginfo/">Android安装包极限优化</a></li>
-			<li class="widget__item"><a class="widget__link" href="/posts/proguard-inline-optimieze-make-stacktrace-loss/">警惕Proguard内联优化导致Crash堆栈信息丢失</a></li>
+			<li class="widget__item"><a class="widget__link" href="/posts/android-profile-tool-bug-record/">AndroidStudio-Profile工具导致的一个奇怪问题</a></li>
+			<li class="widget__item"><a class="widget__link" href="/posts/flutter-source-code-analyze-4/">Flutter源码剖析(四):flutter run流程解析</a></li>
+			<li class="widget__item"><a class="widget__link" href="/posts/flutter-source-code-analyze-3/">Flutter源码剖析(三):Flutter-Android-Embedder启动流程</a></li>
+			<li class="widget__item"><a class="widget__link" href="/posts/flutter-source-code-analyze-2/">Flutter源码剖析(二):源码的阅读与调试环境配置</a></li>
+			<li class="widget__item"><a class="widget__link" href="/posts/flutter-source-code-analyze-1/">Flutter源码剖析(一):源码获取与构建</a></li>
+			<li class="widget__item"><a class="widget__link" href="/posts/android-system-service-cache-analyze/">Android系统服务的注册缓存机制分析</a></li>
+			<li class="widget__item"><a class="widget__link" href="/posts/android-remote-debug-method/">Android客户端远程调试方法</a></li>
+			<li class="widget__item"><a class="widget__link" href="/posts/evolution-of-plugin-framework/">插件化技术的演进之路</a></li>
+			<li class="widget__item"><a class="widget__link" href="/posts/android-make-debuggable/">设置Android全局可调试</a></li>
 		</ul>
 	</div>
 </div>
@@ -132,6 +138,8 @@
 		<ul class="widget__list">
 			<li class="widget__item">
 				<a class="widget__link" href="/categories/android%E5%AE%9E%E8%B7%B5/">Android实践</a></li>
+			<li class="widget__item">
+				<a class="widget__link" href="/categories/category1/">category1</a></li>
 			<li class="widget__item">
 				<a class="widget__link" href="/categories/%E6%8A%98%E8%85%BE%E5%B7%A5%E5%85%B7/">折腾工具</a></li>
 			<li class="widget__item">
@@ -146,6 +154,8 @@
 		<a class="widget-taglist__link widget__link btn" href="/tags/asciidoc/" title="Asciidoc">Asciidoc (1)</a>
 		<a class="widget-taglist__link widget__link btn" href="/tags/hugo/" title="Hugo">Hugo (1)</a>
 		<a class="widget-taglist__link widget__link btn" href="/tags/proguard/" title="Proguard">Proguard (1)</a>
+		<a class="widget-taglist__link widget__link btn" href="/tags/tag1/" title="tag1">tag1 (19)</a>
+		<a class="widget-taglist__link widget__link btn" href="/tags/tag2/" title="tag2">tag2 (19)</a>
 		<a class="widget-taglist__link widget__link btn" href="/tags/%E5%AE%89%E8%A3%85%E5%8C%85%E7%B2%BE%E7%AE%80/" title="安装包精简">安装包精简 (2)</a>
 	</div>
 </div>
