--- a/article-archive/index.html
+++ b/article-archive/index.html
@@ -371,6 +371,12 @@
           </li>
           
           <li>
+            2020-07-20
+            :
+            <a href="/articles/the-technician_s-guide-to-writing/">技术人员的写作指南</a>
+          </li>
+          
+          <li>
             2020-06-21
             :
             <a href="/articles/clean-my-room/">拾屋记</a>
